--- a/index.html
+++ b/index.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Critian Juan</title>
 </head>
 <body>
-    
+    <header class="header"></header>
+    <main class="cuerpo">
+        <section class="s_cards">
+            <div class="cont_central">
+                <div class="cnt_cards">
+                    <div class="card">
+                        <picture class="img_card"></picture>
+                        <h2 class="h_card">LEÓN 1</h2>
+                        <p class="txt card">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer class="footer"></footer>
 </body>
 </html>
