--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
             <div class="cont_central">
                 <div class="cnt_cards">
                     <div class="card">
-                        <picture class="img_card"></picture>
+                        <picture class="img_card">
+                            <img src="images/leon.svg" alt="">
+                        </picture>
                         <h2 class="h_card">LEÓN 1</h2>
-                        <p class="txt card">
+                        <p class="txt_card">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit
                         </p>
                     </div>
