--- a/index.html
+++ b/index.html
@@ -25,7 +25,48 @@
             </div>
         </section>
     </main>
-    <footer class="footer"></footer>
+    <footer class="footer">
+        <div class="cont_central">
+            <div class="cnt_gen_cols_footer">
+                <div class="col_footer">
+                    <h3 class="h_footer">Titulo footer 1</h3>
+                    <ul>
+                        <li><a>Lorem Ipsum</a></li>
+                        <li><a>Simply dummy</a></li>
+                        <li><a>Essentially unchanged</a></li>
+                    </ul>
+                </div>
+                <div class="col_footer">
+                    <h3 class="h_footer">Titulo footer 1</h3>
+                    <ul>
+                        <li><a>Lorem Ipsum</a></li>
+                        <li><a>Simply dummy</a></li>
+                        <li><a>Essentially unchanged</a></li>
+                    </ul>
+                </div>
+                <div class="col_footer">
+                    <div class="cont_susc">
+                        <h3 class="h_footer">Titulo footer 1</h3>
+                        <div class="txt_suscrib">
+                            Escribe tu correo para recibir información
+                        </div>
+                        <form>
+                            <input type="submit" class="campo_susc" placeholder="Tu correo aquí..."/>
+                            <input type="submit" class="btn btn_susc"/>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <div class="cnt_bot_footer">
+                <div class="copyr">©Juan y Cris. Todos los derechos reservados</div>
+                <div class="cnt_redes_footer">
+                    <a href="" class="red_footer"></a>
+                    <a href="" class="red_footer"></a>
+                    <a href="" class="red_footer"></a>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
