avance_estilos_footer

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/normalize.css">
     <title>Critian Juan</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="header"></header>
@@ -32,7 +35,7 @@
             <div class="cnt_gen_cols_footer">
                 <div class="col_footer">
                     <h3 class="h_footer">Titulo footer 1</h3>
-                    <ul>
+                    <ul class="menu_footer">
                         <li><a>Lorem Ipsum</a></li>
                         <li><a>Simply dummy</a></li>
                         <li><a>Essentially unchanged</a></li>
@@ -40,7 +43,7 @@
                 </div>
                 <div class="col_footer">
                     <h3 class="h_footer">Titulo footer 1</h3>
-                    <ul>
+                    <ul class="menu_footer">
                         <li><a>Lorem Ipsum</a></li>
                         <li><a>Simply dummy</a></li>
                         <li><a>Essentially unchanged</a></li>
@@ -52,8 +55,8 @@
                         <div class="txt_suscrib">
                             Escribe tu correo para recibir información
                         </div>
-                        <form>
-                            <input type="submit" class="campo_susc" placeholder="Tu correo aquí..."/>
+                        <form class="fomr_susc">
+                            <input type="text" class="campo_susc" placeholder="Tu correo aquí..."/>
                             <input type="submit" class="btn btn_susc"/>
                         </form>
                     </div>
